--- a/pses_analysis.ipynb
+++ b/pses_analysis.ipynb
@@ -96,10 +96,9 @@
    "source": [
     "# Define helper functions to work with.\n",
     "\n",
-    "# Note: Permutation test should have a seed set at the start of the file and\n",
-    "# may run slowly with default values\n",
+    "# These helper functions are used in the analysis\n",
     "\n",
-    "def calc_mean_se(df, q):\n",
+    "def calc_mean_se(df, q, rm_ppd = False):\n",
     "    \"\"\" Calculates the mean and standard error for a given DataFrame and\n",
     "    question based on the proportion. Returns a tuple with mean, se, and obs.\n",
     "    \n",
@@ -123,6 +122,14 @@
     "                      ans_count).round())\n",
     "        no_neg = int(((df[df.QUESTION == q].MOST_NEGATIVE_OR_LEAST_POSITIVE / 100) * \n",
     "                      ans_count).round())\n",
+    "        \n",
+    "    if rm_ppd:\n",
+    "        prop_pos, _, ppd_n = calc_mean_se(ppd, q)\n",
+    "        ppd_pos = round(prop_pos * ppd_n)\n",
+    "        ppd_neg = ppd_n - ppd_pos\n",
+    "        \n",
+    "        no_pos -= ppd_pos\n",
+    "        no_neg -= ppd_neg\n",
     "\n",
     "    total = no_pos + no_neg\n",
     "    \n",
@@ -135,7 +142,7 @@
     "    \n",
     "    return (prop_pos, se, total)\n",
     "    \n",
-    "def ttest_means_from_stats(df1, df2, q, equal = False):\n",
+    "def ttest_means_from_stats(df1, df2, q, equal = False, subset = True):\n",
     "    \"\"\" Applies a t-test to see if the means between two samples are\n",
     "    statistically different without generating samples. Returns a tuple\n",
     "    with two means and a p-value.\n",
@@ -149,7 +156,7 @@
     "    safer default\"\"\"\n",
     "    \n",
     "    mean1, se1, nobs1 = calc_mean_se(df1, q)\n",
-    "    mean2, se2, nobs2 = calc_mean_se(df2, q)\n",
+    "    mean2, se2, nobs2 = calc_mean_se(df2, q, rm_ppd = subset)\n",
     "    \n",
     "    if not(mean1 or mean2):\n",
     "        return (0, 0, 1)\n",
@@ -160,7 +167,38 @@
     "    \n",
     "    return (mean1 * 100, mean2 * 100, p_value)\n",
     "\n",
-    "def make_sample(df, q):\n",
+    "def make_comparisons(df1, df2, subset = True):\n",
+    "    \"\"\" Helper function to produce a data frame of comparisons sorted by\n",
+    "    p-values with a column for the Holm-Bonferonni correction.\n",
+    "    \n",
+    "    df1 -- Should be ppd, but left as a variable to subset on questions\n",
+    "    df2 -- The data frame to compare against\"\"\"\n",
+    "    \n",
+    "    ppd_means = []\n",
+    "    comp_means = []\n",
+    "    p_vals = []\n",
+    "\n",
+    "    for question in df1.QUESTION:\n",
+    "        ppd_m, comp_m, p_val = ttest_means_from_stats(df1, df2, question, subset = subset)\n",
+    "        ppd_means.append(ppd_m)\n",
+    "        comp_means.append(comp_m)\n",
+    "        p_vals.append(p_val)\n",
+    "\n",
+    "    ppd_df_dict = {\"question\": df1.QUESTION,\n",
+    "                   \"ppd_mean\": ppd_means,\n",
+    "                   \"comp_mean\": comp_means,\n",
+    "                   \"p_val\": p_vals}\n",
+    "\n",
+    "    sorted_df = pd.DataFrame(ppd_df_dict).sort_values(\"p_val\")\n",
+    "    array_count = np.flip(np.array(range(1, sorted_df.shape[0] + 1)))\n",
+    "    sorted_df[\"adj_p_val\"] = 0.05 / array_count\n",
+    "    sorted_df[\"HB_corr\"] = sorted_df[\"p_val\"] < sorted_df[\"adj_p_val\"]\n",
+    "    \n",
+    "    return sorted_df\n",
+    "\n",
+    "# These helper functions are for illustration\n",
+    "\n",
+    "def make_sample(df, q, rm_ppd = False):\n",
     "    \"\"\" Takes the positive/negative proportions from a given data frame and \n",
     "    turns them into an array.\n",
     "    \n",
@@ -184,13 +222,22 @@
     "                      ans_count).round())\n",
     "        no_neg = int(((df[df.QUESTION == q].MOST_NEGATIVE_OR_LEAST_POSITIVE / 100) * \n",
     "                      ans_count).round())\n",
+    "        \n",
+    "    if rm_ppd:\n",
+    "        prop_pos, _, ppd_n = calc_mean_se(ppd, q)\n",
+    "        ppd_pos = round(prop_pos * ppd_n)\n",
+    "        ppd_neg = ppd_n - ppd_pos\n",
+    "        \n",
+    "        no_pos -= ppd_pos\n",
+    "        no_neg -= ppd_neg\n",
+    "        ans_count -= ppd_n\n",
     "    \n",
     "    sample = np.zeros(ans_count)\n",
     "    sample[:no_pos] = 1\n",
     "    \n",
     "    return sample\n",
     "\n",
-    "def ttest_means(df1, df2, q, equal = False):\n",
+    "def ttest_means(df1, df2, q, equal = False, subset = True):\n",
     "    \"\"\" Generates and applies a t-test to see if the means between two samples\n",
     "    are statistically different. Returns a tuple with two means and p-value.\n",
     "    \n",
@@ -203,7 +250,7 @@
     "    safer default\"\"\"\n",
     "    \n",
     "    sample1 = make_sample(df1, q)\n",
-    "    sample2 = make_sample(df2, q)\n",
+    "    sample2 = make_sample(df2, q, rm_ppd = subset)\n",
     "    \n",
     "    if not(sum(sample1) or sum(sample2)):\n",
     "        return (0, 0, 1)\n",
@@ -215,7 +262,10 @@
     "    \n",
     "    return (mean1, mean2, result[1])\n",
     "\n",
-    "def perm_test(df1, df2, q, boot = 30000):\n",
+    "# Note: Permutation test should have a seed set at the start of the file and\n",
+    "# may run slowly with default values\n",
+    "\n",
+    "def perm_test(df1, df2, q, boot = 30000, subset = True):\n",
     "    \"\"\" Runs a permutation test to calculate difference between means when\n",
     "    variance is unknown. Returns a tuple with two means and a p-value.\n",
     "    \n",
@@ -225,7 +275,7 @@
     "    boot -- Number of runs to perform. Default is 30,000\"\"\"\n",
     "    \n",
     "    sample1 = make_sample(df1, q)\n",
-    "    sample2 = make_sample(df2, q)\n",
+    "    sample2 = make_sample(df2, q, rm_ppd = subset)\n",
     "    abs_mean_diff = abs(sample1.mean() - sample2.mean())\n",
     "    all_data = np.hstack([sample1, sample2])\n",
     "    extreme_vals = 0 # Initialize extreme values\n",
@@ -244,36 +294,7 @@
     "    mean1 = sample1.mean() * 100\n",
     "    mean2 = sample2.mean() * 100\n",
     "    \n",
-    "    return (mean1, mean2, p_value)\n",
-    "\n",
-    "def make_comparisons(df1, df2):\n",
-    "    \"\"\" Helper function to produce a data frame of comparisons sorted by\n",
-    "    p-values with a column for the Holm-Bonferonni correction.\n",
-    "    \n",
-    "    df1 -- Should be ppd, but left as a variable to subset on questions\n",
-    "    df2 -- The data frame to compare against\"\"\"\n",
-    "    \n",
-    "    ppd_means = []\n",
-    "    comp_means = []\n",
-    "    p_vals = []\n",
-    "\n",
-    "    for question in df1.QUESTION:\n",
-    "        ppd_m, comp_m, p_val = ttest_means_from_stats(df1, df2, question)\n",
-    "        ppd_means.append(ppd_m)\n",
-    "        comp_means.append(comp_m)\n",
-    "        p_vals.append(p_val)\n",
-    "\n",
-    "    ppd_df_dict = {\"question\": df1.QUESTION,\n",
-    "                   \"ppd_mean\": ppd_means,\n",
-    "                   \"comp_mean\": comp_means,\n",
-    "                   \"p_val\": p_vals}\n",
-    "\n",
-    "    sorted_df = pd.DataFrame(ppd_df_dict).sort_values(\"p_val\")\n",
-    "    array_count = np.flip(np.array(range(1, sorted_df.shape[0] + 1)))\n",
-    "    sorted_df[\"adj_p_val\"] = 0.05 / array_count\n",
-    "    sorted_df[\"HB_corr\"] = sorted_df[\"p_val\"] < sorted_df[\"adj_p_val\"]\n",
-    "    \n",
-    "    return sorted_df"
+    "    return (mean1, mean2, p_value)"
    ]
   },
   {
@@ -312,7 +333,7 @@
     "ppd_econ_stat = make_comparisons(ppd, econ_stat)\n",
     "ppd_econ_wide_stat = make_comparisons(ppd, econ_wide_stat)\n",
     "ppd_ps = make_comparisons(ppd, public_service)\n",
-    "ppd_cpd = make_comparisons(ppd[ppd.QUESTION.isin(set(cpd.QUESTION))], cpd)"
+    "ppd_cpd = make_comparisons(ppd[ppd.QUESTION.isin(set(cpd.QUESTION))], cpd, subset = False)"
    ]
   },
   {
@@ -339,7 +360,7 @@
     "ppd_econ_wide_stat = make_comparisons(\n",
     "    ppd[ppd.QUESTION.isin(econ_wide_stat_lower)], econ_wide_stat)\n",
     "ppd_ps = make_comparisons(ppd[ppd.QUESTION.isin(ps_lower)], public_service)\n",
-    "ppd_cpd = make_comparisons(ppd[ppd.QUESTION.isin(set(cpd_lower))], cpd)"
+    "ppd_cpd = make_comparisons(ppd[ppd.QUESTION.isin(set(cpd_lower))], cpd, subset = False)"
    ]
   },
   {
@@ -370,7 +391,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Q18h', 'Q70w', 'Q70x', 'Q93'}"
+       "{'Q18h', 'Q28', 'Q70b', 'Q70p', 'Q70w', 'Q70x', 'Q93'}"
       ]
      },
      "execution_count": 7,
@@ -390,7 +411,7 @@
     {
      "data": {
       "text/plain": [
-       "set()"
+       "{'Q28', 'Q70b', 'Q70x', 'Q93'}"
       ]
      },
      "execution_count": 8,
@@ -451,16 +472,18 @@
     "At a 5% significance level PPD lags behind each comparison in the following questions:\n",
     "* Public Service: Q18h, Q70p, Q70x\n",
     "* Statistics Canada: Q18h, Q70p, Q70x\n",
-    "* Economic Statistics: Q18h, Q70w, Q70x, Q93\n",
+    "* Economic Statistics: Q18h, Q28, Q70b, Q70p, Q70w, Q70x, Q93\n",
+    "* Economy Wide Statistics: Q28, Q70b, Q70x, Q93\n",
     "* Consumer Prices : Q70b, Q70c, Q70w, Q93\n",
     "\n",
-    "There were no statistical differences for the next layer above PPD, Economy Wide Statistics. Some common patterns have emerged among the categories:\n",
+    "Some common patterns have emerged among the categories:\n",
     "\n",
     "* Q18h - \"My work suffers because of unreliable technology\"\n",
-    "* Q70p - \"Overall to what extent do the following factors cause you stress at work? Difficulty accessing my work tools or network)\"\n",
-    "* Q70x - \"Overall to what extend to the following factors cause you stress at work? Personal issues.\"\n",
+    "* Q70b - \"Overall to waht extent do the following factors cause you stress at work? Pay or other compensation-related issues\n",
+    "* Q70p - \"Overall to what extent do the following factors cause you stress at work? Difficulty accessing my work tools or network\"\n",
+    "* Q70x - \"Overall to what extend to the following factors cause you stress at work? Personal issues\"\n",
     "\n",
-    "At lower level comparisons change in terms of factors contributing to stress and PPD appears to have been affected more by Phoenix.\n",
+    "Broadly speaking, compared to the field level and above PPD appears to lag in terms of access to technology and the stress resulting from it. At lower levels (branch and comparable division) comparisons change in terms of factors contributing to stress with a focus on compensation, including Phoenix related issues.\n",
     "\n",
     "The difficulty here is that we are testing potentially 216 different questions for differences between means. At a 5% significance level it is entirely possible (even likely) there's at least one Type I error. We may feel more secure in the consistency between the results (technology is cited as a difficulty and also emerges as a source of stress). We do not need to rely on judgement to make this determination but can apply a correction. The make_comparisons function has already applied the Holm-Bonferroni correction (applying a stricter significance level based on the number of comparisons being made).\n",
     "\n",
@@ -571,11 +594,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The only significant difference after the Holm-Bonferroni correction is a comparison between PPD and the public service in terms of unreliable technology. It is worth noting that the Public Service subset has the smallest number of questions (37) to test the hypothesis against and so these results are almost certainly driven by the number of questions being tested. As such, we do not need to abandon the conclusions that come from the hypothesis tests above but it should be noted that these results have been 'mined'.\n",
+    "The only significant difference after the Holm-Bonferroni correction is a comparison between PPD and the public service in terms of unreliable technology. It is worth noting that the Public Service subset has the smallest number of questions (37) to test the hypothesis against and so these results are almost certainly driven by the number of questions being tested. As such, we do not need to abandon the conclusions that come from the hypothesis tests above but these conclusions are not immune to concerns about being the result of mining.\n",
     "\n",
     "The distinction is worth making when considering the comparisons that are being made. The Holm-Bonferroni correction is, ultimately, an adjustement to the significance level we tolerate and that significance level is itself a judgement call. As mentioned above, if the concern is that the significant results are the products of random chance, we can feel safer in the fact that there is a logical consistency between the technology questions.\n",
     "\n",
-    "Unfortunately, this explanation does not apply to the remaining questions. Q93 is the question related to Phoenix (against which PPD falls behind Economic Statistics and Consumer Prices at a statistically significant level, but not against Statistics Canada or the Public Service at large). The remaining questions are Q70w (lack of job security with unfavourable comparisons against Economic Statistics and Consumer Prices (CPD)), Q70b (pay or other compensation related issues, unfavourable comparison to CPD), and Q70c (heavy workload, unfavourable comparison against CPD).\n",
+    "Another potential set of internally consistent results are the compensation related questions. Q93 is the question related to Phoenix (against which PPD falls behind Economic Statistics and Consumer Prices at a statistically significant level, but not against Statistics Canada or the Public Service at large) and Q70b list pay and compensation related issues as a source of stress. Unfortunately the remaining remaining questions do not lend themselves to this kind of internal validation. Q70w (lack of job security with unfavourable comparisons against Economic Statistics and Consumer Prices (CPD)), Q70b (pay or other compensation related issues, unfavourable comparison to CPD), and Q70c (heavy workload, unfavourable comparison against CPD) are all relevant but may or may not touch on related issues (e.g. overworked employees may feel underpaid, but overwork may also stem from access to technology).\n",
     "\n",
     "Why compare with CPD? While the two divisions are separate for a reason, it offers the most natural comparison in terms of the type of work that will be done. For instance, when comparing to Economic Statistics the nature of the work in the other divisions may mean that concerns about technology reflect PPD's different technological needs and the fact that they are difficult to address. If this difference persists between PPD and CPD then it invites the question as to why two divisions doing similar work face such different technological outcomes and recommends a different solution (either learning from what CPD has done to mitigate technological issues, or identify the pain points at PPD that are leading us to suffer more technological difficulties).\n",
     "\n",
@@ -596,7 +619,7 @@
     "Compared to the Economic Statistics Field PPD also expressed greater concern regarding its job security. While it should be noted that the field as a whole is quite high (95% positive compared to PPD's 83%), a 12 point gap regarding job security is notable and is a clear issue that can be examined and addressed (as opposed to the more intangible personal issues).\n",
     "\n",
     "### Comparisons at the Branch Level\n",
-    "When compared to to the Economy Wide Statistics Branch PPD the only statistically significant differences were in PPD's favour. This would be best interpreted as saying that PPD does not have any significant areas to improve on relative to its branch. This does not mean that PPD cannot improve, only that the motivation for this improvement should come from another source (improving the lowest score, addressing long standing problems etc.)\n",
+    "Once checking below the Field level the technology gap gives way to other concerns. Pay and compensation related issues and personal issues were major sources of stress. These may be related to the Phoneix issues (Q93), but there is wider room for interpretation between a combination of Q70b (pay related stress) and Q93 (Phoenix issues), than there is the technology questions (Q18h and Q70p).\n",
     "\n",
     "### Comparisons to CPD\n",
     "PPD was compared to CPD given the potential similarity to the nature of the work. When comparing to CPD the significant differences regarding the technology questions (Q18h and Q70p) were not present (PPD's mean was lower, but by a small magnitude). Notably the significant differences related to job security (Q70w) and Phoenix (Q93) persist. While Phoneix issues are not likely to be related to the nature of the work, the difference in stresses related to job security between the field and a comparable division invites further scrutiny. In addition, heavy workload as a source of stress emerges as a factor against which PPD does not favourably compare.\n",
