Corrected variance calculation. Simplified counts/samples

--- a/pses_analysis.ipynb
+++ b/pses_analysis.ipynb
@@ -97,6 +97,28 @@
     "# Define helper functions to work with.\n",
     "\n",
     "# These helper functions are used in the analysis\n",
+    "def get_counts(df, q):\n",
+    "    \"\"\"Takes a data frame and a question and returns the number of positive\n",
+    "    and negative responses for that question as well as the total.\n",
+    "    \n",
+    "    df -- DataFrame to get counts from\n",
+    "    q  -- Question to get counts from\"\"\"\n",
+    "    # Condition to deal with Yes/No answers. Note, one implication of this fix\n",
+    "    # is that 'Agree' is mapped to positive which should be kept in mind when\n",
+    "    # reading questions like Q53\n",
+    "    ans_count = int(df[df.QUESTION == q].ANSCOUNT)\n",
+    "    \n",
+    "    if q in [\"Q28\", \"Q53\", \"Q85\", \"Q87\", \"Q88\", \"Q89\", \"Q90\"]:\n",
+    "        no_pos = int(((df[df.QUESTION == q].AGREE / 100) * \n",
+    "                      ans_count).round())\n",
+    "        no_neg = ans_count - no_pos\n",
+    "    else:\n",
+    "        no_pos = int(((df[df.QUESTION == q].MOST_POSITIVE_OR_LEAST_NEGATIVE / 100) * \n",
+    "                      ans_count).round())\n",
+    "        no_neg = int(((df[df.QUESTION == q].MOST_NEGATIVE_OR_LEAST_POSITIVE / 100) * \n",
+    "                      ans_count).round())\n",
+    "    \n",
+    "    return (no_pos, no_neg, no_pos + no_neg)\n",
     "\n",
     "def calc_mean_se(df, q, rm_ppd = False):\n",
     "    \"\"\" Calculates the mean and standard error for a given DataFrame and\n",
@@ -105,42 +127,21 @@
     "    df -- The DataFrame for the sample\n",
     "    q  -- The question\"\"\"\n",
     "    \n",
-    "    ans_count = int(df[df.QUESTION == q].ANSCOUNT)\n",
-    "    \n",
-    "    # Condition to deal with Yes/No answers. Note, one implication of this fix\n",
-    "    # is that 'Agree' is mapped to positive which should be kept in mind when\n",
-    "    # reading questions like Q53\n",
-    "    if q in [\"Q28\", \"Q53\", \"Q85\", \"Q87\", \"Q88\", \"Q89\", \"Q90\"]:\n",
-    "        no_pos = int(((df[df.QUESTION == q].AGREE / 100) * \n",
-    "                      ans_count).round())\n",
-    "        no_neg = ans_count - no_pos\n",
-    "    elif q == \"Q54\":\n",
-    "        print(\"Q54 is a special case, treat it manually.\")\n",
-    "        return(0, 0, 1)\n",
-    "    else:\n",
-    "        no_pos = int(((df[df.QUESTION == q].MOST_POSITIVE_OR_LEAST_NEGATIVE / 100) * \n",
-    "                      ans_count).round())\n",
-    "        no_neg = int(((df[df.QUESTION == q].MOST_NEGATIVE_OR_LEAST_POSITIVE / 100) * \n",
-    "                      ans_count).round())\n",
+    "    no_pos, no_neg, count = get_counts(df, q)\n",
     "        \n",
     "    if rm_ppd:\n",
-    "        prop_pos, _, ppd_n = calc_mean_se(ppd, q)\n",
-    "        ppd_pos = round(prop_pos * ppd_n)\n",
-    "        ppd_neg = ppd_n - ppd_pos\n",
-    "        \n",
+    "        ppd_pos, ppd_neg, ppd_n = get_counts(ppd, q)\n",
     "        no_pos -= ppd_pos\n",
     "        no_neg -= ppd_neg\n",
-    "\n",
-    "    total = no_pos + no_neg\n",
+    "        count -= ppd_n\n",
     "    \n",
-    "    prop_pos = no_pos / total\n",
-    "    prop_neg = no_neg / total\n",
+    "    prop_pos = no_pos / count\n",
+    "    prop_neg = no_neg / count\n",
     "    \n",
     "    # Calculate sum of squares\n",
-    "    ss = (no_pos * (prop_neg ** 2)) + (no_neg * (prop_pos ** 2))\n",
-    "    se = np.sqrt(ss / (total - 1))\n",
+    "    se = np.sqrt(prop_pos * (prop_neg))\n",
     "    \n",
-    "    return (prop_pos, se, total)\n",
+    "    return (prop_pos, se, count)\n",
     "    \n",
     "def ttest_means_from_stats(df1, df2, q, equal = False, subset = True):\n",
     "    \"\"\" Applies a t-test to see if the means between two samples are\n",
@@ -179,6 +180,12 @@
     "    p_vals = []\n",
     "\n",
     "    for question in df1.QUESTION:\n",
+    "        if question == \"Q54\":\n",
+    "            print(\"Q54 is a special case. Treat manually\")\n",
+    "            ppd_means.append(0)\n",
+    "            comp_means.append(0)\n",
+    "            p_vals.append(1)\n",
+    "            continue\n",
     "        ppd_m, comp_m, p_val = ttest_means_from_stats(df1, df2, question, subset = subset)\n",
     "        ppd_means.append(ppd_m)\n",
     "        comp_means.append(comp_m)\n",
@@ -197,7 +204,6 @@
     "    return sorted_df\n",
     "\n",
     "# These helper functions are for illustration\n",
-    "\n",
     "def make_sample(df, q, rm_ppd = False):\n",
     "    \"\"\" Takes the positive/negative proportions from a given data frame and \n",
     "    turns them into an array.\n",
@@ -205,34 +211,15 @@
     "    df -- DataFrame to take proportions from\n",
     "    q  -- Question to take proportions from\"\"\"\n",
     "    \n",
-    "    ans_count = int(df[df.QUESTION == q].ANSCOUNT)\n",
-    "    \n",
-    "    # Condition to deal with Yes/No answers. Note, one implication of this fix\n",
-    "    # is that 'Agree' is mapped to positive which should be kept in mind when\n",
-    "    # reading questions like Q53\n",
-    "    if q in [\"Q28\", \"Q53\", \"Q85\", \"Q87\", \"Q88\", \"Q89\", \"Q90\"]:\n",
-    "        no_pos = int(((df[df.QUESTION == q].AGREE / 100) * \n",
-    "                      ans_count).round())\n",
-    "        no_neg = ans_count - no_pos\n",
-    "    elif q == \"Q54\":\n",
-    "        print(\"Q54 is a special case, treat it manually.\")\n",
-    "        return np.zeros(ans_count)\n",
-    "    else:\n",
-    "        no_pos = int(((df[df.QUESTION == q].MOST_POSITIVE_OR_LEAST_NEGATIVE / 100) * \n",
-    "                      ans_count).round())\n",
-    "        no_neg = int(((df[df.QUESTION == q].MOST_NEGATIVE_OR_LEAST_POSITIVE / 100) * \n",
-    "                      ans_count).round())\n",
+    "    no_pos, no_neg, count = get_counts(df, q)\n",
     "        \n",
     "    if rm_ppd:\n",
-    "        prop_pos, _, ppd_n = calc_mean_se(ppd, q)\n",
-    "        ppd_pos = round(prop_pos * ppd_n)\n",
-    "        ppd_neg = ppd_n - ppd_pos\n",
-    "        \n",
+    "        ppd_pos, ppd_neg, ppd_n = get_counts(ppd, q)\n",
     "        no_pos -= ppd_pos\n",
     "        no_neg -= ppd_neg\n",
-    "        ans_count -= ppd_n\n",
+    "        count -= ppd_n\n",
     "    \n",
-    "    sample = np.zeros(ans_count)\n",
+    "    sample = np.zeros(count)\n",
     "    sample[:no_pos] = 1\n",
     "    \n",
     "    return sample\n",
@@ -251,9 +238,6 @@
     "    \n",
     "    sample1 = make_sample(df1, q)\n",
     "    sample2 = make_sample(df2, q, rm_ppd = subset)\n",
-    "    \n",
-    "    if not(sum(sample1) or sum(sample2)):\n",
-    "        return (0, 0, 1)\n",
     "    \n",
     "    result = stats.ttest_ind(sample1, sample2, equal_var = equal)\n",
     "    \n",
@@ -315,16 +299,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n",
-      "Q54 is a special case, treat it manually.\n"
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n"
      ]
     }
    ],
@@ -632,10 +611,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ppd_statcan.to_csv(\"statcan_negs.csv\")\n",
+    "ppd_econ_stat.to_csv(\"econ_stat_negs.csv\")\n",
+    "ppd_econ_wide_stat.to_csv(\"econ_wide_stat_negs.csv\")\n",
+    "ppd_ps.to_csv(\"ps_negs.csv\")\n",
+    "ppd_cpd.to_csv(\"ppd.negs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n",
+      "Q54 is a special case. Treat manually\n"
+     ]
+    }
+   ],
+   "source": [
+    "ppd_statcan = make_comparisons(ppd, statcan)\n",
+    "ppd_econ_stat = make_comparisons(ppd, econ_stat)\n",
+    "ppd_econ_wide_stat = make_comparisons(ppd, econ_wide_stat)\n",
+    "ppd_ps = make_comparisons(ppd, public_service)\n",
+    "ppd_cpd = make_comparisons(ppd[ppd.QUESTION.isin(set(cpd.QUESTION))], cpd, subset = False)\n",
+    "\n",
+    "ppd_statcan.to_csv(\"statcan_all.csv\")\n",
+    "ppd_econ_stat.to_csv(\"econ_stat_all.csv\")\n",
+    "ppd_econ_wide_stat.to_csv(\"econ_wide_stat_all.csv\")\n",
+    "ppd_ps.to_csv(\"ps_all.csv\")\n",
+    "ppd_cpd.to_csv(\"ppd_all.csv\")"
+   ]
   }
  ],
  "metadata": {
