--- a/pses_analysis.ipynb
+++ b/pses_analysis.ipynb
@@ -606,7 +606,7 @@
     "### Conclusions\n",
     "The absence of technological differences between the two prices divisions may suggest that these divisions have more demanding technological needs that are not being met by the existing divisions (or, alternatively, are not organized in a way that is harmonious with the delivery of technological services). Regardless of the source, technology affecting the quality of the work and becoming a source of stress is one of the most consistent results from the PSES.\n",
     "\n",
-    "Beyond technological issues issues, PPD appears to be more heavily affected by Phoneix pay issues and concerns about job security at the branch (and lower) level. While we do not find evidence that PPD is any different at the field level or above, the persistence of the gap when comparing against the branch and anotehr division recommends further investigation."
+    "Beyond technological issues issues, PPD appears to be more heavily affected by Phoneix pay issues and concerns about job security at the branch (and lower) level. While we do not find evidence that PPD is any different at the field level or above, the persistence of the gap when comparing against the branch and another division recommends further investigation."
    ]
   },
   {
