Updated docstrings and small adjustments to text

--- a/pses_analysis.ipynb
+++ b/pses_analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example of a Jupyter notebook which allows a user to produce markdown between fragments of code. This will require a working instance of Python the pandas, numpy, and scipy modules (most likely through using the Anaconda distribution). Otherwise this document should be readable but the code will not run. Comments on the PSES will be written with brief explanations of the code.\n",
+    "This is an example of a Jupyter notebook which allows a user to produce markdown between fragments of code. This will require a working instance of Python and the pandas, numpy, and scipy modules (most likely through using the Anaconda distribution). Otherwise this document should be readable but the code will not run. Comments on the PSES will be written with brief explanations of the code.\n",
     "\n",
     "## Setup\n",
     "We begin by importing the necessary modules and the PSES file. The preferred file does not have labels but is easy to manipulate computationally. For some reason this file has an unusual encoding (\"ANSI\") and so we read it into Pandas to make it easy to manipulate and include an argument to ensure it is read correctly."
@@ -27,8 +27,11 @@
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "\n",
+    "# Name of the file in directory. Could also be directly downloaded in Python\n",
+    "data = \"2020-public-service-employee-survey-open-dataset-ensemble-de-donnees-ouvertes-du-sondage-aupres-.csv\"\n",
+    "\n",
     "# Load Data Set\n",
-    "pse = pd.read_csv(\"2020-public-service-employee-survey-open-dataset-ensemble-de-donnees-ouvertes-du-sondage-aupres-.csv\", encoding = \"ANSI\")"
+    "pse = pd.read_csv(data, encoding = \"ANSI\")"
    ]
   },
   {
@@ -80,11 +83,11 @@
    "source": [
     "In the final section of the setup we define functions to help with the analysis. Because this document is instructional there are more functions written here than we will actually use. Each function is documented but this is an example of breaking down a problem into smaller components and then reusing those components.\n",
     "\n",
-    "The essence of these functions is this. The mean results for each of the questions are compared using a t-test (specifically Welch's t-test which does not require the samples to be equal or the population variance for each sample to be equal though still performs reasonably well if they are). The end result is a data frame with the mean for each question from each subset, a p-value and adjusted significance level.\n",
+    "The mean of the results for each of the questions are compared using a t-test (specifically Welch's t-test which does not require the samples to be equal or the population variance for each sample to be equal though still performs reasonably well if they are). The end result is a data frame with the mean for each question from each subset, a p-value and adjusted significance level.\n",
     "\n",
     "A few notes on the approaches:\n",
-    "* The fastest program is to simply run the test on the statistics directly. These statistics can be obtained from the survey using the proportions and and answer counts. This is the one the program uses.\n",
-    "* The alternative is to recreate the sample and run the t-test directly from stats. This is implemented but not used.\n",
+    "* The fastest program is to simply run the test on the statistics directly. These statistics can be obtained from the survey using the proportions and and answer counts. This is the one the program uses and is consistent with the historical application of this test.\n",
+    "* The alternative is to recreate the sample and run the t-test directly from the sample. This is implemented but not used.\n",
     "* A final choice is a bootstrap method. This is purely for illustration as the problem we are dealing with falls well within either Student's t-test (when adjusted for different sample sizes) or Welch's t-test. The biggest disadvantage of this approach is that each question requires about a minute and a half to two minutes to run."
    ]
   },
@@ -124,8 +127,9 @@
     "    \"\"\" Calculates the mean and standard error for a given DataFrame and\n",
     "    question based on the proportion. Returns a tuple with mean, se, and obs.\n",
     "    \n",
-    "    df -- The DataFrame for the sample\n",
-    "    q  -- The question\"\"\"\n",
+    "    df     -- The DataFrame for the sample\n",
+    "    q      -- The question\n",
+    "    rm_ppd -- Boolean for when sample is superset of PPD, default False\"\"\"\n",
     "    \n",
     "    no_pos, no_neg, count = get_counts(df, q)\n",
     "        \n",
@@ -148,10 +152,11 @@
     "    statistically different without generating samples. Returns a tuple\n",
     "    with two means and a p-value.\n",
     "    \n",
-    "    df1   -- DataFrame for first sample\n",
-    "    df2   -- DataFrame for second sample\n",
-    "    q     -- Question to test samples for\n",
-    "    equal -- Argument for t-test, default is to assume variance is not equal\n",
+    "    df1    -- DataFrame for first sample (should be ppd)\n",
+    "    df2    -- DataFrame for second sample\n",
+    "    q      -- Question to test samples for\n",
+    "    equal  -- Argument for t-test, default is to assume variance is not equal\n",
+    "    subset -- Boolean indicating if df1 (ppd) is a subset of df2, default True\n",
     "    \n",
     "    Note on equality: in our application equal should = True but this is the\n",
     "    safer default\"\"\"\n",
@@ -172,8 +177,10 @@
     "    \"\"\" Helper function to produce a data frame of comparisons sorted by\n",
     "    p-values with a column for the Holm-Bonferonni correction.\n",
     "    \n",
-    "    df1 -- Should be ppd, but left as a variable to subset on questions\n",
-    "    df2 -- The data frame to compare against\"\"\"\n",
+    "    df1    -- Should be ppd, but left as a variable to subset on questions\n",
+    "    df2    -- The data frame to compare against\n",
+    "    subset -- Boolean indicating if df1 (ppd) is a subset of df2, default True\n",
+    "    \"\"\"\n",
     "    \n",
     "    ppd_means = []\n",
     "    comp_means = []\n",
@@ -203,13 +210,14 @@
     "    \n",
     "    return sorted_df\n",
     "\n",
-    "# These helper functions are for illustration\n",
+    "# These helper functions are for illustration only\n",
     "def make_sample(df, q, rm_ppd = False):\n",
     "    \"\"\" Takes the positive/negative proportions from a given data frame and \n",
     "    turns them into an array.\n",
     "    \n",
     "    df -- DataFrame to take proportions from\n",
-    "    q  -- Question to take proportions from\"\"\"\n",
+    "    q  -- Question to take proportions from\n",
+    "    rm_ppd -- Boolean for when sample is superset of PPD, default False\"\"\"\n",
     "    \n",
     "    no_pos, no_neg, count = get_counts(df, q)\n",
     "        \n",
@@ -232,6 +240,7 @@
     "    df2   -- DataFrame for second sample\n",
     "    q     -- Question to test samples for\n",
     "    equal -- Argument for t-test, default is to assume variance is not equal\n",
+    "    subset -- Boolean indicating if df1 (ppd) is a subset of df2, default True\n",
     "    \n",
     "    Note on equality: in our application equal should = True but this is the\n",
     "    safer default\"\"\"\n",
@@ -256,7 +265,9 @@
     "    df1  -- DataFrame for first sample\n",
     "    df2  -- DataFrame for second sample\n",
     "    q    -- Question to test samples for\n",
-    "    boot -- Number of runs to perform. Default is 30,000\"\"\"\n",
+    "    boot -- Number of runs to perform. Default is 30,000\n",
+    "    subset -- Boolean indicating if df1 (ppd) is a subset of df2, default True\n",
+    "    \"\"\"\n",
     "    \n",
     "    sample1 = make_sample(df1, q)\n",
     "    sample2 = make_sample(df2, q, rm_ppd = subset)\n",
@@ -446,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results are above but we will summarize them here since the code may not be immediately intuitive:\n",
+    "The results are above but we will summarize them here since the code may not be intuitive:\n",
     "\n",
     "At a 5% significance level PPD lags behind each comparison in the following questions:\n",
     "* Public Service: Q18h, Q70p, Q70x\n",
@@ -458,7 +469,7 @@
     "Some common patterns have emerged among the categories:\n",
     "\n",
     "* Q18h - \"My work suffers because of unreliable technology\"\n",
-    "* Q70b - \"Overall to waht extent do the following factors cause you stress at work? Pay or other compensation-related issues\n",
+    "* Q70b - \"Overall to waht extent do the following factors cause you stress at work? Pay or other compensation-related issues\"\n",
     "* Q70p - \"Overall to what extent do the following factors cause you stress at work? Difficulty accessing my work tools or network\"\n",
     "* Q70x - \"Overall to what extend to the following factors cause you stress at work? Personal issues\"\n",
     "\n",
@@ -577,7 +588,7 @@
     "\n",
     "The distinction is worth making when considering the comparisons that are being made. The Holm-Bonferroni correction is, ultimately, an adjustement to the significance level we tolerate and that significance level is itself a judgement call. As mentioned above, if the concern is that the significant results are the products of random chance, we can feel safer in the fact that there is a logical consistency between the technology questions.\n",
     "\n",
-    "Another potential set of internally consistent results are the compensation related questions. Q93 is the question related to Phoenix (against which PPD falls behind Economic Statistics and Consumer Prices at a statistically significant level, but not against Statistics Canada or the Public Service at large) and Q70b list pay and compensation related issues as a source of stress. Unfortunately the remaining remaining questions do not lend themselves to this kind of internal validation. Q70w (lack of job security with unfavourable comparisons against Economic Statistics and Consumer Prices (CPD)), Q70b (pay or other compensation related issues, unfavourable comparison to CPD), and Q70c (heavy workload, unfavourable comparison against CPD) are all relevant but may or may not touch on related issues (e.g. overworked employees may feel underpaid, but overwork may also stem from access to technology).\n",
+    "Another potential set of internally consistent results are the compensation related questions. Q93 is the question related to Phoenix (against which PPD falls behind Economic Statistics and Consumer Prices at a statistically significant level, but not against Statistics Canada or the Public Service at large) and Q70b list pay and compensation related issues as a source of stress. Unfortunately the remaining remaining questions do not lend themselves to this kind of internal validation. Q70w (lack of job security with unfavourable comparisons against Economic Statistics and Consumer Prices (CPD)), Q70b (pay or other compensation related issues, unfavourable comparison to CPD), and Q70c (heavy workload, unfavourable comparison against CPD) are all relevant but may or may not touch on related issues (e.g. overworked employees may feel underpaid, but overwork may also stem from access to technology, or another source altogether).\n",
     "\n",
     "Why compare with CPD? While the two divisions are separate for a reason, it offers the most natural comparison in terms of the type of work that will be done. For instance, when comparing to Economic Statistics the nature of the work in the other divisions may mean that concerns about technology reflect PPD's different technological needs and the fact that they are difficult to address. If this difference persists between PPD and CPD then it invites the question as to why two divisions doing similar work face such different technological outcomes and recommends a different solution (either learning from what CPD has done to mitigate technological issues, or identify the pain points at PPD that are leading us to suffer more technological difficulties).\n",
     "\n",
@@ -615,6 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Export results for negative values\n",
     "ppd_statcan.to_csv(\"statcan_negs.csv\")\n",
     "ppd_econ_stat.to_csv(\"econ_stat_negs.csv\")\n",
     "ppd_econ_wide_stat.to_csv(\"econ_wide_stat_negs.csv\")\n",
@@ -640,6 +652,7 @@
     }
    ],
    "source": [
+    "# Restore full t-tests and export for all\n",
     "ppd_statcan = make_comparisons(ppd, statcan)\n",
     "ppd_econ_stat = make_comparisons(ppd, econ_stat)\n",
     "ppd_econ_wide_stat = make_comparisons(ppd, econ_wide_stat)\n",
