Fixed a couple typos

--- a/clt_example.ipynb
+++ b/clt_example.ipynb
@@ -500,8 +500,15 @@
    "source": [
     "In order to try and minimize the gaps these plots use a smaller number of bins but the point is still the same even despite the relative coarseness of the plot. The distribution of means is normal, centered around the mean that we get from the PSES.\n",
     "\n",
-    "These examples should illustrate what it means to make statements about the mean. A higher response rate for the survey will not change the distribution of the responses, but because we are making a statment about the mean of those responses relative to another group, we care about its distribution. This kind of test can be replicated with any given distribution in your favourite statistical program and as the number of means gets larger the "
+    "These examples should illustrate what it means to make statements about the mean. A higher response rate for the survey will not change the distribution of the responses, but because we are making a statment about the mean of those responses relative to another group, we care about its distribution. This kind of test can be replicated with any given distribution in your favourite statistical program and as the number of means gets larger the plot will resemble the normal distribution."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
