--- a/clt_example.ipynb
+++ b/clt_example.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "It is easy to misunderstand some concepts here and so it is helpful to clarify a few steps. The mean is calculated from a different sample each time with the same number of observations (in this case 55). We are collecting the number of means and as the number of means goes up it takes on the shape of the normal distribution. The CLT does _not_ say that as n increases the data becomes normal, and it is not a comment on the number of observations needed in the sample in order to count as 'large'.\n",
     "\n",
-    "It seems fair to say that the more 'non-normal' a population is the more observations we would need in the sample to approximate normality. The best I've been able to find here is a rule of thumb of about 20-30. To quote Wooldridge's undergraduate textbook \"Unfortunately, we are necessarily limited in what we can say about how 'large' a sample size is needed for asymptotic analysis to be approximate; this depednds on the underlying population distribution. But large sample approximations have been known to work well for sample sizes as small as n = 20.\"\n",
+    "It seems fair to say that the more 'non-normal' a population is the more observations we would need in the sample to approximate normality. The best I've been able to find here is a rule of thumb of about 20-30. To quote Wooldridge's undergraduate textbook \"Unfortunately, we are necessarily limited in what we can say about how 'large' a sample size is needed for asymptotic analysis to be approximate; this depends on the underlying population distribution. But large sample approximations have been known to work well for sample sizes as small as n = 20.\"\n",
     "\n",
     "For further illustration let's consider Q18h, which showed a significant difference but had a small number of responses (39). We'll run the same simulation with the smaller sample producing the estimates of the mean."
    ]
@@ -500,7 +500,7 @@
    "source": [
     "In order to try and minimize the gaps these plots use a smaller number of bins but the point is still the same even despite the relative coarseness of the plot. The distribution of means is normal, centered around the mean that we get from the PSES.\n",
     "\n",
-    "These examples should illustrate what it means to make statements about the mean. A higher response rate for the survey will not change the distribution of the responses, but because we are making a statment about the mean of those responses relative to another group, we care about its distribution. This kind of test can be replicated with any given distribution in your favourite statistical program and as the number of means gets larger the plot will resemble the normal distribution."
+    "These examples should illustrate what it means to make statements about the mean. A higher response rate for the survey will not change the distribution of the responses. Because we are making a statment about the mean of those responses relative to another group, we care about the distribution of the means. This kind of test can be replicated with any given distribution in your favourite statistical program and as the number of means gets larger the plot will resemble the normal distribution."
    ]
   },
   {
